--- a/src/main/resources/assets/smoothboot/lang/es_mx.json
+++ b/src/main/resources/assets/smoothboot/lang/es_mx.json
@@ -1,16 +1,16 @@
 {
   "text.autoconfig.smoothboot.title": "ThreadTweak",
-  "text.autoconfig.smoothboot.option.threadCount": "Recuento de nucleos",
-  "text.autoconfig.smoothboot.option.threadCount.bootstrap": "Recuento de nucleos de arranque",
+  "text.autoconfig.smoothboot.option.threadCount": "Número de hilos",
+  "text.autoconfig.smoothboot.option.threadCount.bootstrap": "Número de hilos de arranque",
   "text.autoconfig.smoothboot.option.threadCount.bootstrap.@Tooltip[0]": "Nota: Aumentar se sabe que disminuye el rendimiento.",
-  "text.autoconfig.smoothboot.option.threadCount.bootstrap.@Tooltip[1]": "Mejor dejarlo en 1.",
-  "text.autoconfig.smoothboot.option.threadCount.main": "Recuento de nucleos principales",
+  "text.autoconfig.smoothboot.option.threadCount.bootstrap.@Tooltip[1]": "Mejor dejado en 1.",
+  "text.autoconfig.smoothboot.option.threadCount.main": "Número de hilos principales",
   "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[0]": "Este valor afecta mucho los tiempos de carga.",
-  "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[1]": "También puede afectar el rendimiento en el juego.",
-  "text.autoconfig.smoothboot.option.threadPriority": "Prioridad de nucleo",
-  "text.autoconfig.smoothboot.option.threadPriority.game": "Prioridad de nucleo del juego",
-  "text.autoconfig.smoothboot.option.threadPriority.bootstrap": "Prioridad de nucleo de arranque",
-  "text.autoconfig.smoothboot.option.threadPriority.main": "Prioridad de nucleo principal",
-  "text.autoconfig.smoothboot.option.threadPriority.io": "Prioridad de nucleo de E/S",
-  "text.autoconfig.smoothboot.option.threadPriority.integratedServer": "Prioridad de nucleo del servidor integrado"
+  "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[1]": "También puede afectar el rendimiento del juego.",
+  "text.autoconfig.smoothboot.option.threadPriority": "Prioridad de hilo",
+  "text.autoconfig.smoothboot.option.threadPriority.game": "Prioridad de hilo del juego",
+  "text.autoconfig.smoothboot.option.threadPriority.bootstrap": "Prioridad de hilo de arranque",
+  "text.autoconfig.smoothboot.option.threadPriority.main": "Prioridad de hilo principal",
+  "text.autoconfig.smoothboot.option.threadPriority.io": "Prioridad de hilo de E/S",
+  "text.autoconfig.smoothboot.option.threadPriority.integratedServer": "Prioridad de hilo del servidor integrado"
 }
